# weather-pipeline

./: .gitignore  main.py  pyproject.toml  requirements.txt
flows/: 01_getting_started.py  weather_flow.py
scripts/: deploy.sh
src/: export_file.py  fetch_weather.py  file_handling.py  interest_region.py  orchestration.py  plot_weather.py  query_weather.py  transform_weather.py  utils.py
src/file_handling/: __init__.py  __main__.py
src/plot_weather/: __init__.py  __main__.py
