[project]
name = "weather-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "matplotlib>=3.9.0",
    "pandas>=2.3.3",
    "prefect>=3.5.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]
