[project]
name = "weather-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "duckdb>=1.4.1",
    "matplotlib>=3.9.0",
    "pandas>=2.3.3",
    "prefect>=3.5.0",
    "prefect-aws>=0.5.13",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]
